--- a/Desbravadores-site/public/historia.html
+++ b/Desbravadores-site/public/historia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aventura | História</title>
     <link rel="stylesheet" href="styles/historia.css">
-    <link rel="" href="">
+    <link rel="shortcut icon" href="assets/icon/Logo-desbravadores.webp" type="image/x-icon">
 </head>
 <body>
     <div class="header">
