--- a/Desbravadores-site/public/quiz.html
+++ b/Desbravadores-site/public/quiz.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aventura | Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
+    <link rel="shortcut icon" href="assets/icon/Logo-desbravadores.webp" type="image/x-icon">
 </head>
     <div class="header">
         <div class="conteiner">
@@ -23,6 +24,11 @@
                 <li>
                     <div class="box2">
                         <a href="conta.html">Conta</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="box4">
+                        <a href="dashgeral.html">Estatísticas Gerais</a>
                     </div>
                 </li>
                 <li>
