--- a/Desbravadores-site/public/conta.html
+++ b/Desbravadores-site/public/conta.html
@@ -2,7 +2,7 @@
 <html lang="pt-br"> 
 
 <head>
-    <link rel="shortcut icon" href="../assets/icon/favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icon/Logo-desbravadores.webp" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,6 +46,11 @@
                         <div class="box2">
                             <a href="#">Conta</a>
                         </div>
+                    </li>
+                    <li>
+                    <div class="box4">
+                        <a href="dashgeral.html">Estatísticas Gerais</a>
+                    </div>
                     </li>
                     <li>
                     <div class="box3">
