--- a/Desbravadores-site/public/index.html
+++ b/Desbravadores-site/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aventura | Página inicial</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="shortcut icon" href="assets/icon/Logo-desbravadores.webp" type="image/x-icon">
 </head>
 <body>
     <div class="header">
