--- a/Desbravadores-site/public/sobre.html
+++ b/Desbravadores-site/public/sobre.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aventura</title>
+    <title>Aventura | Sobre mim</title>
     <link rel="stylesheet" href="styles/sobre.css">
-    <link rel="" href="">
+    <link rel="shortcut icon" href="assets/icon/Logo-desbravadores.webp" type="image/x-icon">
 </head>
 <body>
     <div class="header">
