--- a/Desbravadores-site/public/index.html
+++ b/Desbravadores-site/public/index.html
@@ -13,7 +13,7 @@
             <div class="conteiner-conteudo">
                 <section>
                     <div class="conteiner-inicial">
-                      <video src="" autoplay loop muted></video>
+                      <video src="assets/video/VideoFundoIndex.mp4" autoplay loop muted></video>
                     </div>
                     <ul class="nav-bar">
                         <img src="assets/icon/Logo-desbravadores.webp" alt="logo-desbravadores">
